[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signallab"
version = "0.1.0"
description = "A DSP lab notebook for tracing, visualizing, comparing, and debugging signal-processing pipelines."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Jun Simons" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
